--- a/css/master.css
+++ b/css/master.css
@@ -37,3 +37,10 @@ img {
   margin-top: 10px;
   width: 80%;
 }
+@media screen and (max-width: 800px) {
+    .profile, .profile2, .profile3 {
+      background-color: black;
+      color: white;
+
+    }
+}
