--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,8 @@
+.dark{
+  background-color: black;
+  color: white;
+
+}
 .profile {
   float:left;
   width: 30%;
@@ -5,6 +10,11 @@
   background-color: lightgreen;
   height: 1000px;
 }
+
+button {
+  margin: 10px;
+}
+
 .profile2 {
   float:left;
   width: 30%;
